create a unittest for the model rectangle

--- a/0x0C-python-almost_a_circle/.vscode/settings.json
+++ b/0x0C-python-almost_a_circle/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "[python]": {
-        "editor.defaultFormatter": "ms-python.autopep8"
+        "editor.defaultFormatter": "ms-python.autopep8",
     },
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "none",
+    "editor.defaultFormatter": null,
+    "editor.formatOnSave": true,
+    "editor.formatOnType": false,
+    "python.analysis.typeCheckingMode": "basic"
 }
